# DomainForge

./: .alt.coderabbit.yml  .bak.coderabbit.yml  .coderabbit.yml  .gitignore  .gitkeep  .pre-commit-config.yaml  .release-please-manifest.json  .sea-registry.toml  .sops.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  PHASE9_PLAN_UPDATES.md  PHASE9_SUMMARY.md  PROOFS.md  QUICKSTART_WASM.md  README.md  README_PYTHON.md  README_TYPESCRIPT.md  README_WASM.md  RELEASE_NOTES.md  bunfig.toml  check_output.txt  clippy_output.txt  commitlint.config.cjs  deny.toml  devbox.json  docker-compose.supabase.yml  domainforge.code-workspace  example.js  fix_tests.py  fix_unit_new.py  index.d.ts  index.js  justfile  lefthook.yml  napi.config.js  package-lock.json  (+9 more)
.agents/: OBSERVED_DEBT.md  README.md  current_state.md  next_steps.md
.cargo/: audit.toml  config.toml
.github/: copilot-instructions.md  dependabot.yml  xcopilot-instructions.md  xxcopilot-instructions.md
.serena/: project.yml
conformance/: README.md
context/: DSL_instructions.md  Logic and semantics.md  Rust_details.md  SBVR_reverse_engineered.md  UBM_mine.md  (+1 more)
docs/: AGENT.md  (+37 more)
domainforge-python/: CHANGELOG-python.md  MIGRATING.md  README.md  pyproject.toml
sea-core/: CHANGELOG.md  Cargo.toml  README.md  deny.toml  fix_api.py
sea-core/benches/: null_overhead.rs
sea-core/docs/specs/projections/: sbvr_kg_mapping.md
sea-core/examples/: basic.sea  evolution_semantics.sea  parser_demo.rs
sea-core/examples/cli/: import_export_workflow.sh  validate_example.sh
sea-core/grammar/: sea.pest
sea-core/src/: AGENTS.md  concept_id.rs  kg.rs  kg_import.rs  lib.rs  sbvr.rs  semantic_version.rs  uuid_module.rs  validation_error.rs  validation_result.rs
sea-core/src/authority/: AGENTS.md  compiler.rs  environment.rs  error.rs  fact_resolver.rs  mod.rs  pack.rs  policy.rs  resolver.rs  trace.rs  transform.rs  types.rs
sea-core/src/calm/: export.rs  import.rs  mod.rs  models.rs  sbvr_import.rs
sea-core/src/cli/: AGENTS.md  authority.rs  format.rs  import.rs  mod.rs  normalize.rs  pack.rs  parse.rs  project.rs  test.rs  validate.rs  validate_kg.rs
sea-core/src/error/: diagnostics.rs  fuzzy.rs  mod.rs
sea-core/src/formatter/: comments.rs  config.rs  mod.rs  printer.rs
sea-core/src/graph/: mod.rs  to_ast.rs
sea-core/src/module/: resolver.rs
sea-core/src/parser/: AGENTS.md  ast.rs  ast_convert.rs  ast_schema.rs  error.rs  lint.rs  mod.rs  printer.rs  profiles.rs  string_utils.rs
sea-core/src/policy/: AGENTS.md  core.rs  expression.rs  mod.rs  normalize.rs  policy.rs  quantifier.rs  three_valued.rs  three_valued_microbench.rs  type_infer.rs  type_inference.rs  violation.rs
sea-core/src/primitives/: entity.rs  flow.rs  instance.rs  mapping_contract.rs  metric.rs  mod.rs  projection_contract.rs  quantity.rs  relation.rs  resource.rs  resource_instance.rs  role.rs
sea-core/src/projection/: buf.rs  contracts.rs  engine.rs  mod.rs  protobuf.rs  registry.rs
sea-core/src/python/: authority.rs  error.rs  graph.rs  mod.rs  policy.rs  primitives.rs  registry.rs  semantic_pack.rs  units.rs
sea-core/src/registry/: mod.rs
sea-core/src/semantic_pack/: builder.rs  canonical_json.rs  diagnostics.rs  diff.rs  mod.rs  pack_set.rs  resolver.rs  review.rs  signing.rs  validator.rs
sea-core/src/typescript/: authority.rs  error.rs  graph.rs  mod.rs  policy.rs  primitives.rs  registry.rs  semantic_pack.rs  units.rs
sea-core/src/units/: mod.rs
sea-core/src/wasm/: authority.rs  error.rs  graph.rs  mod.rs  policy.rs  primitives.rs  semantic_pack.rs  units.rs
sea-core/std/: aws.sea  http.sea
sea-core/tests/: aggregation_enhanced_tests.rs  aggregation_eval_tests.rs  aggregation_integration_tests.rs  aggregation_parser_tests.rs  aggregation_tests.rs  authority_conformance_tests.rs  authority_fixture_tests.rs  calm_round_trip_tests.rs  calm_schema_validation_tests.rs  cast_operator_tests.rs  cli_binary_check.rs  cli_import_tests.rs  cli_path_traversal_tests.rs  cli_tests.rs  conformance_corpus_tests.rs  debug_group_by.rs  debug_group_by_where.rs  debug_simple_where.rs  derived_fact_null_poisoning_tests.rs  diagnostics_tests.rs  dimension_unit_tests.rs  dsl_v2_tests.rs  entity_tests.rs  evolution_enforcement_tests.rs  evolution_semantics_tests.rs  flow_tests.rs  flow_unit_validation_tests.rs  golden_trace_stability_tests.rs  graph_integration_tests.rs  graph_tests.rs  import_parsing_tests.rs  instance_integration_tests.rs  instance_parsing_tests.rs  instance_tests.rs  kg_roundtrip_honesty_tests.rs  kg_uri_encoding_tests.rs  metric_tests.rs  module_resolution_tests.rs  namespace_registry_tests.rs  null_handling_tests.rs  (+50 more)
(+1009 files in other folders)
