[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "domainforge"
version = "0.14.0"
description = "SEA DSL - Semantic Enterprise Architecture Domain Specific Language"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "DomainForge Contributors" }
]
keywords = ["enterprise-architecture", "dsl", "domain-modeling", "business-logic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "mypy>=1.0",
]

[tool.maturin]
module-name = "domainforge"
features = ["python", "three_valued_logic"]
manifest-path = "../domainforge-core/Cargo.toml"
